# open-emoji-battler

./: .prettierrc.toml  README.md  chain.Dockerfile  chain.Dockerfile.dockerignore  chain.build-docker.sh  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
chain/: .gitignore  Makefile  README.md
chain/node/: Cargo.toml
chain/node/specs/: _dev.json  _production.json  _staging.json  production-raw.json  staging-raw.json
chain/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
chain/pallets/first-airdrop/: Cargo.toml
chain/pallets/first-airdrop/src/: lib.rs
chain/pallets/game/: Cargo.toml
chain/pallets/game/src/: lib.rs
chain/pallets/transaction-payment-pow/: Cargo.toml
chain/pallets/transaction-payment-pow/src/: lib.rs
chain/runtime/: Cargo.toml
chain/runtime/src/: lib.rs
chain/scripts/: package.json  seed.ts  seedData.ts  setCode.ts  update.ts  updateData.ts  utils.ts
common/js/: .gitignore  .prettierignore  README.md  package.json  tsconfig.base.json  tsconfig.json  tsconfig.typegen.json
common/js/src/: api.ts  contract.ts  env.ts  envs.json  identity.ts  index.ts  pow.ts  scriptUtils.ts  utils.ts
common/js/src/envs/: local.example.json  production.json  staging.json
common/js/src/interfaces/: augment-api-consts.ts  augment-api-errors.ts  augment-api-events.ts  augment-api-query.ts  augment-api-runtime.ts  augment-api-tx.ts  augment-types.ts  definitions.ts  lookup.ts  registry.ts  types-lookup.ts  types.ts
common/js/src/pow/: base64.ts  (+3 more)
common/rs/: Cargo.toml
common/rs/benches/: my_benchmark.rs
common/rs/codec_types_derive/: Cargo.toml
common/rs/codec_types_derive/src/: lib.rs
common/rs/src/: codec_types.rs  error.rs  lib.rs  mtc.rs  pow.rs  utils.rs
common/rs/src/mtc/: battle.rs  common.rs  decoders.rs  emo_bases.rs  ep.rs  finish.rs  ghost.rs  result.rs  setup.rs  shop.rs  utils.rs
common/rs/src/mtc/battle/: board.rs  common.rs  march.rs  organizer.rs
common/rs/src/mtc/shop/: board.rs  catalog.rs  coin.rs  common.rs  player_operation.rs
contract/: .gitignore  Cargo.toml  README.md
contract/deploy/: .gitignore  build-all.sh  dev.sh  package.json  utils.ts
contract/deploy/202109210_init/: availableEmoBaseIds.json  deriveEmoData.ts  emoBases.json  forwarder.json  game.json  game.wasm  instantiatedAddress.game.production.json  logic.json  logic.wasm  script.ts  storage.json
contract/deploy/202305260_removeAdmin/: script.ts
contract/deploy/202305270_ink4/: game.json  game.wasm
contract/deploy/dev/: deployAll.ts  instantiatedAddress.forwarder.production.json  instantiatedAddress.game.production.json  instantiatedAddress.logic_admin.production.json  instantiatedAddress.logic_finish_mtc_shop.production.json  instantiatedAddress.logic_start_mtc.production.json  instantiatedAddress.storage.production.json  setCode.ts  setLocalEnv.ts  setup.ts  stress.ts  updateEmoData.ts  upgradeContract.ts  uploadCode.ts
contract/forwarder/: Cargo.toml  lib.rs
contract/game/: Cargo.toml  lib.rs
contract/game/src/: functions.rs  lib.rs
contract/logic/: Cargo.toml  lib.rs
contract/logic_admin/: Cargo.toml  lib.rs
contract/logic_finish_mtc_shop/: Cargo.toml  lib.rs
contract/logic_start_mtc/: Cargo.toml  lib.rs
contract/storage/: Cargo.toml  lib.rs
contracts/: .gitignore
contracts/deploy/: package.json  tsconfig.json  utils.ts
contracts/deploy/202109210_init/: emoBases.json  forwarder.json  forwarder.wasm  logic.json  logic.wasm  script.ts  storage.json  storage.wasm
contracts/forwarder/: Cargo.toml  lib.rs
contracts/logic/: Cargo.toml  lib.rs
contracts/storage/: Cargo.toml  lib.rs
data/: availableEmoBaseIds.json  emoBases.json  package.json  seed.ts  update.ts  utils.ts
docs/: README.md  _config.yml  how-to-play.md  introduction.md  tech.md
front/: .gitignore  .prettierignore  README.md  package.json  tsconfig.json  webpack.config.js
front/scripts/: generateSrcWasm.ts  put-redirects.sh
front/src/: index.html  index.sass  index.ts
front/src/misc/: accountUtils.ts  constants.ts  decl.d.ts  elementHelpers.ts  env.ts  favicon.ts  mtcUtils.ts  pow.ts  pow.worker.ts  route.ts  types.ts  utils.ts
front/src/style/: base.sass  emo.sass  generic.sass  minireset.sass  others.sass  variables.sass
front/src/wasm/: base64.json  index.ts  raw.d.ts  raw.js
front/wasm/: Cargo.toml
front/wasm/src/: lib.rs
oneshots/: 20210519_getFirstPlayAirdropClaimedAddresses.ts  20210525_getUniqueAirdropTargetAddresses.addresses.json  20210525_getUniqueAirdropTargetAddresses.ts  20210611_buildAirdropClaimersMDs.ts  20210611_rmrkClaimedAddresses.json  20210611_uniqueClaimedAddresses.json  20210613_buildTwitterGiveawayWinnersMD.ts  20210618_listPlayerEPs.ts  20220512_listPlayerBestEPs.json  20220512_listPlayerBestEPs.ts  20220520_findBlockNumByTime.ts  20220520_testAndListPlayerTopEPs.json  20220520_testAndListPlayerTopEPs.ts  20220523_getShibuyaPlayers.json  20220523_getShibuyaPlayers.ts  20220524_mergeTargetPlayers.json  20220524_mergeTargetPlayers.ts  20220531_buildTargetPlayersMD.ts  20220605_initNFT.ts  20220609_transferNftRoles.ts  20220821_analyzeGhostLastBoards.ts  20220821_getGhostLastBoards.json  20220821_getGhostLastBoards.ts  20220922_getLeaderboard.json  20220922_getLeaderboard.ts  20220923_buildLeaderboardMD.ts  20220923_leaderboardRewards.json  20220923_transferLeaderboardRewards.ts  20230407_uniquesRedeposit.ts  connectionTemplate.ts  package.json
onetime-scripts/: 20210519_getFirstPlayAirdropClaimedAddresses.json  20210519_getFirstPlayAirdropClaimedAddresses.ts  20210522_getRmrkAirdropTargetAddresses.ts  20210525_getUniqueAirdropTargetAddresses.rawData.json  20210525_getUniqueAirdropTargetAddresses.ts  20210528_buildAirdropMDs.ts  20210611_buildAirdropClaimersMDs.ts  20210611_buildRmrkAndUniqueAirdropClaimersList.ts  20210611_rmrkClaimedAddresses.json  20210611_uniqueClaimedAddresses.json  20210613_buildTwitterGiveawayWinnersMD.ts  20210613_twitterGiveawayWinners.json  20210618_listPlayerEPs.ts  package.json  tsconfig.json
tools/: codecTypesDefs.ts  generateCodecTypes.ts  package.json
(+76 files in other folders)
