[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rand = { version = "=0.8.4", default-features = false, features=["alloc"] }
rand_pcg = { version = "=0.3.1", default-features = false }
sp-std = { version = "=3.0.0", default-features = false }

parity-scale-codec = { version = "< 4", default-features = false, features = ["derive"] }

# chain
blake2-rfc = { version = "0.2.18", default-features = false, optional = true }
libm = { version = "0.2.1", default-features = false, optional = true }

# contract
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
ink_storage = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false, optional = true }
ink_primitives = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false, optional = true }
ink_metadata = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false, optional = true }
codec_types_derive = { path = "./codec_types_derive", optional = true }

[dev-dependencies]
hex = { version = "0.4.2" }
criterion = "0.3.3"

[features]
default = ["std", "view-logs"]
std = [
    "rand/std",
    "parity-scale-codec/std",
    "sp-std/std",
]
view-logs = []
chain = ["blake2-rfc", "libm"]
ink = ["ink_storage", "ink_primitives", "codec_types_derive"]
ink-std = ["std", "ink", "scale-info/std", "ink_storage/std", "ink_primitives/std", "ink_metadata/std"]

[[bench]]
name = "my_benchmark"
harness = false
