[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rand = { version = "=0.8.5", default-features = false, features=["alloc"] }
rand_pcg = { version = "=0.3.1", default-features = false }
sp-std = { version = "=4.0.0", default-features = false }
parity-scale-codec = { version = "3.5.0", default-features = false, features = ["derive"] }

# option
anyhow = { version = "=1.0.59", default-features = false, optional = true }

# chain
blake2-rfc = { version = "0.2.18", default-features = false, optional = true }
libm = { version = "0.2.1", default-features = false, optional = true }

# contract
scale-info = { version = "2.7.0", default-features = false, features = ["derive"], optional = true }
ink = { version = "4.2.0", default-features = false, optional = true }

[dev-dependencies]
hex = { version = "0.4.3" }
criterion = "0.3.6"

[features]
default = ["std", "chain", "front", "contract-std"]

std = [
    "rand/std",
    "parity-scale-codec/std",
    "sp-std/std",
    "anyhow/std"
]
error = ["anyhow"]
view-logs = []

contract = ["ink"]
contract-std = ["std", "contract", "scale-info/std", "ink/std"]

chain = ["blake2-rfc", "libm", "error"]
front = ["view-logs", "error"]

[[bench]]
name = "my_benchmark"
harness = false
