[package]
name = "forwarder"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Open Emoji Battler"]

[dependencies]
ink_primitives = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false }
ink_metadata = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false }
ink_storage = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false }
ink_prelude = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

logic_start_mtc = { path = "../logic_start_mtc", default-features = false, features = ["ink-as-dependency"] }
logic_finish_mtc_shop = { path = "../logic_finish_mtc_shop", default-features = false, features = ["ink-as-dependency"] }

common = { path = "../../common/rs", default-features = false, features = ["ink"] }

[lib]
name = "forwarder"
path = "lib.rs"
crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_prelude/std",
    "ink_lang/std",

    "scale/std",
    "scale-info/std",

    "logic_start_mtc/std",
    "logic_finish_mtc_shop/std",

    "common/ink-std",
]
ink-as-dependency = []
