[package]
name = "forwarder"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Open Emoji Battler"]

[dependencies]
ink_primitives = { version = "3.3.0", default-features = false }
ink_metadata = { version = "3.3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.3.0", default-features = false }
ink_storage = { version = "3.3.0", default-features = false }
ink_prelude = { version = "3.3.0", default-features = false }
ink_lang = { version = "3.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

logic_start_mtc = { path = "../logic_start_mtc", default-features = false, features = ["ink-as-dependency"] }
logic_finish_mtc_shop = { path = "../logic_finish_mtc_shop", default-features = false, features = ["ink-as-dependency"] }

common = { path = "../../common/rs", default-features = false, features = ["contract"] }

[lib]
name = "forwarder"
path = "lib.rs"
crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_prelude/std",
    "ink_lang/std",

    "scale/std",
    "scale-info/std",

    "logic_start_mtc/std",
    "logic_finish_mtc_shop/std",

    "common/contract-std",
]
ink-as-dependency = []
