[package]
name = "game"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Open Emoji Battler"]

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.7.0", default-features = false, features = ["derive"], optional = true }

common = { path = "../../common/rs", default-features = false, features = ["contract"] }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",

    "scale/std",
    "scale-info/std",

    "common/contract-std",
]
ink-as-dependency = []
