[package]
name = "logic"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Open Emoji Battler"]

[dependencies]
ink_primitives = { version = "3.0.0-rc8", default-features = false }
ink_metadata = { version = "3.0.0-rc8", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc8", default-features = false }
ink_storage = { version = "3.0.0-rc8", default-features = false }
ink_prelude = { version = "3.0.0-rc8", default-features = false }
ink_lang = { version = "3.0.0-rc8", default-features = false }

scale = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
scale-info = { version = "1", default-features = false, features = ["derive"], optional = true }

storage = { version = "0.1.0", path = "../storage", default-features = false, features = ["ink-as-dependency"] }

common = { path = "../../common/rs", version = "0.1.0", default-features = false, features = ["ink"] }

[lib]
name = "logic"
path = "lib.rs"
crate-type = [
    "cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_prelude/std",
    "ink_lang/std",

    "scale/std",
    "scale-info/std",

    "storage/std",

    "common/ink-std",
]
ink-as-dependency = []
