[package]
name = "logic_finish_mtc_shop"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Open Emoji Battler"]

[dependencies]
ink_primitives = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false }
ink_metadata = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false }
ink_storage = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false }
ink_prelude = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", rev = "be42524a23243c0ce497a54b9bf5405a04cc74b5", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

storage = { path = "../storage", default-features = false, features = ["ink-as-dependency"] }

common = { path = "../../common/rs", default-features = false, features = ["ink"] }

[lib]
name = "logic_finish_mtc_shop"
path = "lib.rs"
crate-type = [
    "cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_prelude/std",
    "ink_lang/std",

    "scale/std",
    "scale-info/std",

    "storage/std",

    "common/ink-std",
]
ink-as-dependency = []
