[package]
name = "storage"
version = "0.1.0"
edition = "2018"
resolver = "2"
license = "Apache-2.0"
authors = ["Open Emoji Battler"]

[dependencies]
ink_primitives = { git = "https://github.com/paritytech/ink", rev = "fd94d38", default-features = false }
ink_metadata = { git = "https://github.com/paritytech/ink", rev = "fd94d38", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/paritytech/ink", rev = "fd94d38", default-features = false }
ink_storage = { git = "https://github.com/paritytech/ink", rev = "fd94d38", default-features = false }
ink_prelude = { git = "https://github.com/paritytech/ink", rev = "fd94d38", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", rev = "fd94d38", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

common = { path = "../../common/rs", version = "0.1.0", default-features = false, features = ["ink"] }

[lib]
name = "storage"
path = "lib.rs"
crate-type = [
    "cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_prelude/std",

    "scale/std",
    "scale-info/std",

    "common/ink-std",
]
ink-as-dependency = []
