[package]
name = 'pallet-game'
version = '0.1.0'
edition = '2018'
license = "Apache-2.0"

[dependencies]
common = { path = '../../../common/rs', default-features = false, features = ['chain'] }
hex = { version = "0.4.2", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ['derive']}
pallet-randomness-collective-flip = { version = '3.0.0', default-features = false }
sp-std = { version = '3.0.0', default-features = false}
frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false }

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'common/std',
    'parity-scale-codec/std',
    'pallet-randomness-collective-flip/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
]
